syntax = "proto3";

option csharp_namespace = "AuctionService";

service GrpcAuction {
    rpc GetAuction(GetAuctionRequest) returns (GrpcAuctionResponse);
}

message GetAuctionRequest {
    // This is not assigning a value 1 to id. It's telling Grpc that id is in position 1.
    string id = 1;
}

message GrpcAuctionModel {
    string id = 1;
    string seller = 2;
    string auctionend = 3;
    int32 reservePrice = 4;
}

message GrpcAuctionResponse {
    GrpcAuctionModel auction = 1;
}